--- a/dist.ini
+++ b/dist.ini
@@ -16,10 +16,14 @@ test2_v0       = 1
 remove = strict
 remove = warnings
 remove = base
+remove = Getopt::Std
 
 ;[Prereqs]
 ;Foo::Bar = 0
 
 [Author::Plicease::Upload]
-cpan = 0
+cpan = 1
+
+[SetScriptShebang]
+[CommentOut]
 
