--- a/dist.ini
+++ b/dist.ini
@@ -12,11 +12,7 @@ release_tests  = 1
 installer      = Author::Plicease::MakeMaker
 test2_v0       = 1
 
-[RemovePrereqs]
-remove = strict
-remove = warnings
-remove = base
-remove = Getopt::Std
+[Author::Plicease::Core]
 
 ;[Prereqs]
 ;Foo::Bar = 0
