--- a/dist.ini
+++ b/dist.ini
@@ -11,6 +11,7 @@ travis_status  = 1
 release_tests  = 1
 installer      = Author::Plicease::MakeMaker
 test2_v0       = 1
+readme_from    = bin/whichdll
 
 [Author::Plicease::Core]
 
