--- a/dist.ini
+++ b/dist.ini
@@ -12,6 +12,7 @@ release_tests  = 1
 installer      = Author::Plicease::MakeMaker
 test2_v0       = 1
 readme_from    = bin/whichdll
+github_user    = Perl5-FFI
 
 [Author::Plicease::Core]
 
