--- a/dist.ini
+++ b/dist.ini
@@ -3,7 +3,7 @@ author           = Graham Ollis <plicease@cpan.org>
 license          = Perl_5
 copyright_holder = Graham Ollis
 copyright_year   = 2018
-version          = 0.02
+version          = 0.03
 
 [@Author::Plicease]
 :version       = 2.29
@@ -13,6 +13,7 @@ installer      = Author::Plicease::MakeMaker
 test2_v0       = 1
 readme_from    = bin/whichdll
 github_user    = Perl5-FFI
+irc            = irc://irc.perl.org/#native
 
 [Author::Plicease::Core]
 
