--- a/dist.ini
+++ b/dist.ini
@@ -7,13 +7,13 @@ version          = 0.03
 
 [@Author::Plicease]
 :version       = 2.29
-travis_status  = 1
 release_tests  = 1
 installer      = Author::Plicease::MakeMaker
 test2_v0       = 1
 readme_from    = bin/whichdll
 github_user    = PerlFFI
 irc            = irc://irc.perl.org/#native
+workflow       = linux
 
 [Author::Plicease::Core]
 
